Fixed alignment issue again in catalogue caused by ul element (the bullets)

--- a/styles.css
+++ b/styles.css
@@ -3,9 +3,9 @@ body {
     font-family: Arial, Helvetica, sans-serif;
 }
 
- /* main {
-    margin-top: 4rem;
-} */
+ main {
+    margin: 25px 50px 75px 50px;
+}
 
 /*  navbar   */
 #navbar {
@@ -78,7 +78,7 @@ body {
 }
 
 
-/*  contact us page form    */
+/*  about + contact us page form    */
 #contact {
     margin-top: 20px;
     width: 40%;
@@ -120,11 +120,11 @@ textarea {
     resize: none;
 }
 
-#contact-text, #about-text {
+#contact-text, #about-text, #catalogue-text {
     text-align: center;
 }
 
-#contact-text h1, #about-text h1 {
+#contact-text h1, #about-text h1, #catalogue-text h1 {
     font-size: 3rem;
     margin-bottom: 0;
 }
@@ -137,16 +137,16 @@ textarea {
     margin-bottom: 20px;
 }
 
-#contact-text p, #about-text p {
+#contact-text p, #about-text p, #catalogue-text p {
     font-size: 1.15rem;
     margin: 3px;
 }
 
 
-/*Car items catalog page */
+/* Catalogue page */
 
 .car-list {
-    width: 100vw;
+    width: 100%;
     /* background-color: #1b1b32; */
   }
   /* .car-list {
@@ -163,8 +163,14 @@ textarea {
   } */
 
   #car-list-item {
-    width: 90vw;
-    height: 100%;                  
+    width: 90%;
+    height: 100%;           
+  }
+
+  ul#car-list-item {
+    list-style-type: none;
+    margin: 0 auto;
+    padding: 0;
   }
 
   .car-item {
@@ -172,7 +178,6 @@ textarea {
     display: flex;
     flex-direction: column;
     row-gap: 1rem;
-    /* padding: 8px 9px; */
     padding: 1rem 1rem;
     visibility: visible;
     justify-content: start;
@@ -205,19 +210,17 @@ textarea {
     text-decoration: none;
   }
 
-  /* .car-item iframe {
-    width: 100%;
-    height: 50vh;
-  } */
-  iframe {
-    width: 100%;
-    height: 50vh;
+
+  /* selected car from catalogue */
+  #car-model-info {
+    width: 90%;
+    height: 100%;                
   }
 
-  /* selected car from catalog */
-  #car-model-info {
-    width: 90vw;
-    height: 100%;                  
+  ul#car-model-info {
+    list-style-type: none;
+    margin: 0 auto;
+    padding: 0;
   }
 
   .car-info {
@@ -236,15 +239,18 @@ textarea {
     margin: 1.5rem auto;
   }
 
-
+  iframe {
+    width: 100%;
+    height: 50vh;
+  }
 
 
   /* Responive web design for mobile devices currently */
   @media screen and (min-width: 320px) and (max-width: 769px) {
     /* navbar */
     #navbar a {
-      padding: 0.25rem;
-      margin: 15 0.5 15px 0.5;
+      padding: 0.50rem 0;
+      margin: 15px 0.25 15px 0.25;
     }
 
     #navbar-logo {
@@ -267,14 +273,10 @@ textarea {
       font-size: 1rem;
     }
 
-    /* catalog */
+    /* catalogue */
     .car-item {
       padding: 0.5rem 0.5rem;
-      margin: 1rem 0 1rem 0;
-    }
-
-    .image-flex p {
-      font-size: 1rem;
+      margin: 1rem auto;
     }
 
     .car-info {
@@ -282,22 +284,32 @@ textarea {
       margin: 1rem auto;
     }
 
-    /* contact us */
-    #contact {
-      width: 85%;
-    }
-
     #car-list-item {
-      width: 80vw;                
+      width: 100%;                
     }
 
     #car-model-info {
-      width: 80vw;            
+      width: 100%;            
+    }
+
+    .image-flex p {
+      font-size: 1rem;
+    }
+
+    /* car info */
+    iframe {
+      width: 100%;
+      height: 75%;
+    }
+
+    /* contact us */
+    #contact {
+      width: 100%;
     }
   }
 
   @media screen and (min-width: 770px) and (max-width: 1300px) {
     #contact {
-      width: 60%;
+      width: 70%;
     }
   }
